# ESP_CAM_Face_Detection

./: CMakeLists.txt  build.ps1  idf_component.yml  partitions.csv
main/: CMakeLists.txt  main.c
main/include/: camera.h  common.h  config.h  network.h  servo.h  webserver.h
main/ld/: script.ld
main/src/: camera.c  config.c  globals.c  network.c  servo.c  webserver.c
